--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -4,10 +4,11 @@
             <div class="jumbotron bg-dark shadow">
                 <h1 class="display-3" style="color: #ececec;">Hello<span style="color: #c095e9;"> World!</span></h1>
                 <hr class="my-4">
-                <h5 style="color: #ececec;">My name is Andrew Moses. I'm a Full-Stack Web Developer focused on creating unique, accessible, and user-friendly applications. I'm also a Team Captain for DevCore, and author. </h5>
-                <h5 style="color: #ececec;">Curious about coding projects I'm working on, or interested in contacting
-                    me? Just follow the big purple Navigation buttons. Interested in my social media or my writing? Just
-                    follow the links at the bottom of each page. Thanks for stopping by! </h5>
+                <h5 style="color: #ececec;">My name is Andrew Moses. I'm a Full Stack Web Developer focused on
+                    creating
+                    unique, accessible, and user-friendly applications. I'm also a Team Captain for DevCore, and
+                    author. Follow the big purple buttons to look around, and thanks for stopping by!
+                </h5>
             </div>
         </div>
 
@@ -16,8 +17,7 @@
                 <div class="navigation-headline">
                     {{!-- <h3 class="text-dark"><span style="color: #7332af;">Nav</span>igation</h3> --}}
                 </div>
-                <a href="/portfolio"><button type="button"
-                        class="btn btn-sm shadow btn-portfolio">Projects</button></a>
+                <a href="/portfolio"><button type="button" class="btn btn-sm shadow btn-portfolio">Projects</button></a>
                 <a href="/contact"><button type="button"
                         class="btn btn-sm shadow btn-contact-aboutpg">Contact</button></a>
                 <a href="/resume"><button type="button" class="btn btn-sm shadow btn-resume">Resume</button></a>
@@ -26,196 +26,185 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-12 col-lg-4">
+        <div class="col-sm-12 col-lg-6">
             <div class="card-body card-tools">
-                <h3 class="text-dark">Here are some of the tools I use on a daily basis. Click an icon to check them out, or use the arrows to navigate!</h3>
-            </div>
-
-
-        </div>
-        <div class="col-sm-12 col-lg-8">
-            <div id="carousel-controllers" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="img-container-icon">
-                            <a href="https://reactjs.org/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-react-original-wordmark colored"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://www.mongodb.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-mongodb-plain-wordmark colored"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                             <a href="https://sequelize.org/" target="_blank" rel="noreferrer"> <i class="devicon devicon-sequelize-plain-wordmark colored"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                             <a href="https://aws.amazon.com/amplify/" target="_blank" rel="noreferrer"> <i class="devicon devicon-amazonwebservices-plain-wordmark colored"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://slack.com/" target="_blank" rel="noreferrer" ><i class="devicon devicon-slack-plain-wordmark colored"></i></a>
-
-                        </div>
-                    </div>
-
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                             <a href="https://www.npmjs.com/" target="_blank" rel="noreferrer"> <i class="devicon devicon-npm-original-wordmark colored"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                             <a href="https://webpack.js.org/" target="_blank" rel="noreferrer"> <i class="devicon devicon-webpack-plain-wordmark colored"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                             <a href="https://babeljs.io/" target="_blank" rel="noreferrer"> <i class="devicon devicon-babel-plain colored"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://nodejs.org/en/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-nodejs-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://www.mysql.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-mysql-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://jquery.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-jquery-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://www.javascript.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-javascript-plain colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-html5-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://devcenter.heroku.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-heroku-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://handlebarsjs.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-handlebars-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://git-scm.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-git-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://expressjs.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-express-original colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-css3-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://developers.google.com/web/tools/chrome-devtools" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-chrome-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://getbootstrap.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-bootstrap-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://travis-ci.org/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-travis-plain-wordmark colored"></i>
-
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://code.visualstudio.com/" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-visualstudio-plain-wordmark colored"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="img-container-icon">
-                            <a href="https://gitlab.com/gitlab-com" target="_blank" rel="noreferrer">
-                                <i class="devicon devicon-gitlab-plain-wordmark colored"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carousel-controllers" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel-controllers" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+                <h3 class="text-dark">Here are some of the tools I use on a daily basis. Click an icon to check them
+                    out!</h3>
             </div>
         </div>
+    </div>
+    <br>
+    <div class="row d-flex flex-direction-row flex-wrap justify-content-center">
+
+        <a class="devicon-a" href="https://gitlab.com/gitlab-com" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+                <i class="devicon devicon-gitlab-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+
+        <a class="devicon-a" href="https://code.visualstudio.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+                <i class="devicon devicon-visualstudio-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://travis-ci.org/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+                <i class="devicon devicon-travis-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://reactjs.org/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-react-original-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://www.mongodb.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-mongodb-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://sequelize.org/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+                <i class="devicon devicon-sequelize-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://aws.amazon.com/amplify/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container"><i
+                    class="devicon devicon-amazonwebservices-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://slack.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container"><i
+                    class="devicon devicon-slack-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://www.npmjs.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+                <i class="devicon devicon-npm-original-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://webpack.js.org/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container"><i
+                    class="devicon devicon-webpack-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://babeljs.io/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+                <i class="devicon devicon-babel-plain colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://nodejs.org/en/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-nodejs-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://www.mysql.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-mysql-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://jquery.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-jquery-plain-wordmark colored"></i>
+            </div>
+
+        </a>
+
+        <a class="devicon-a" href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-css3-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-html5-plain-wordmark colored"></i>
+            </div>
+        </a>
+
+        <a class="devicon-a" href="https://getbootstrap.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-bootstrap-plain-wordmark colored"></i>
+            </div>
+
+        </a>
+
+        <a class="devicon-a" href="https://developers.google.com/web/tools/chrome-devtools" target="_blank"
+            rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-chrome-plain-wordmark colored"></i>
+            </div>
+
+        </a>
+
+        <a class="devicon-a" href="https://www.javascript.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-javascript-plain colored"></i>
+            </div>
+
+        </a>
+
+        <a class="devicon-a" href="https://expressjs.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-express-original colored"></i>
+            </div>
+
+        </a>
+
+        <a class="devicon-a" href="https://git-scm.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-git-plain-wordmark colored"></i>
+            </div>
+
+        </a>
+
+        <a class="devicon-a" href="https://handlebarsjs.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-handlebars-plain-wordmark colored"></i>
+            </div>
+
+        </a>
+
+        <a class="devicon-a" href="https://devcenter.heroku.com/" target="_blank" rel="noreferrer">
+            <div class="col-sm-4 col-md-2 devicon-container">
+
+                <i class="devicon devicon-heroku-plain-wordmark colored"></i>
+            </div>
+
+        </a>
+
+        <a class="devicon-a" href="https://github.com" target="_blank" rel="noreferrer">
+
+            <div class="col-sm-4 col-md-2 devicon-container">
+                <i class="devicon devicon-github-original-wordmark colored"></i>
+            </div>
+        </a>
+
     </div>
 
 
