--- a/views/contact-success.handlebars
+++ b/views/contact-success.handlebars
@@ -38,7 +38,7 @@
             aria-label="Link to my instagram page"><i class="fab fa-instagram fa-3x text-dark"></i></a>
     </div>
     <div class="">
-        <a href="https://www.amazon.com/All-Things-Never-Had-Guts-ebook/dp/B0852XZFQN" target="_blank" rel="noreferrer"
+        <a href="https://www.amazon.com/Sadder-Songs-Andrew-Moses/dp/B08X6DRP4N/ref=sr_1_1?dchild=1&keywords=sadder+songs&qid=1617484950&sr=8-1" target="_blank" rel="noreferrer"
             aria-label="Link to my amazon product page"><i class="fab fa-amazon fa-3x text-dark"></i></a>
     </div>
 </div>
